# rlign

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: gitlab-mirror-actions.yml
docs/source/: conf.py  example.nblink  example_hz.nblink  index.rst  rlign.rst
examples/: agg_modes.ipynb  demo_ecgs.npz  example.ipynb  example_hz.ipynb
rlign/: __init__.py  rlign.py  utils.py
test/: test_rlign.py  test_utils.py
